2004-09-02 Mike Kestner <mkestner@ximian.com>

	* updater/* : rework of duncan's updater from monodoc that doesn't
	cause so many whitespace issues and removes a few other annoyances.

2004-08-29 Shane Landrum <epicene@pobox.com>

	* en/Gtk/Dialog.xml
	* en/Gtk/HBox.xml
	* en/Gtk/Image.xml
	* en/Gtk/Init.xml
	* en/Gtk/Invisible.xml
	* en/Gtk/Misc.xml
	* en/Gtk/NotebookTab.xml
	* en/Gtk/Paned.xml
	* en/Gtk/Quit.xml
	* en/Gtk/RedirectArgs.xml
	* en/Gtk/RulerMetric.xml
	* en/Gtk/Scale.xml
	* en/Gtk/ScrolledWindow.xml
	* en/Gtk/Selection.xml
	* en/Gtk/SelectionData.xml
	* en/Gtk/TargetEntry.xml
	* en/Gtk/TargetList.xml
	* en/Gtk/TargetPair.xml
	* en/Gtk/TextLogAttrCache.xml: Miscellaneous docs.
	* ChangeLog: fixes for 2 prior commit logs.

2004-08-29 Shane Landrum <epicene@pobox.com>

	* en/Gtk/Key.xml
	* en/Gtk/KeySnoopFunc.xml: Docs for global hotkeys.
	* en/Gtk/Range.xml
	* en/Gtk/MoveSliderArgs.xml: Docs for number ranges.
	* en/Gtk/Entry.xml
	* en/Gtk/Label.xml: Small texty widgets docs.

2004-08-29 Shane Landrum <epicene@pobox.com>

	* en/Gtk/Menu.xml
	* en/Gtk/MenuDetachFunc.xml
	* en/Gtk/MenuItem.xml
	* en/Gtk/MenuPositionFunc.xml
	* en/Gtk/MenuShell.xml: Docs for menu-related classes.	

2004-08-29 Shane Landrum <epicene@pobox.com>
	
	* en/Gtk/TextSegCheckFunc.xml
	* en/Gtk/TextSegCleanupFunc.xml
	* en/Gtk/TextSegDeleteFunc.xml
	* en/Gtk/TextSegLineChangeFunc.xml
	* en/Gtk/TextSegSplitFunc.xml
	* en/Gtk/TextLineSegment.xml
	* en/Gtk/TextLineSegmentClass.xml: Marked 'do not use',
	pending an answer on #64410.
	
2004-08-29 Shane Landrum <epicene@pobox.com>

	* MarkDeletedArgs.xml
	* MarkSetArgs.xml
	* OrientationChangedArgs.xml
	* SelectionClearEventArgs.xml
	* SetBaseTargetArgs.xml
	* SetFocusArgs.xml
	* StateChangedArgs.xml
	* SwitchPageArgs.xml
	* TextEventArgs.xml: Event data.

2004-08-29 Shane Landrum <epicene@pobox.com>

	* HTML.xml
	* HTMLBeginFlags.xml
	* HTMLClassProperties.xml
	* HTMLCommandType.xml
	* HTMLEditorAPI.xml
	* HTMLEditorEventType.xml