@@ -95,52 +95,6 @@ For example in the X backend, a native pixmap handle is an Xlib XID.
         </remarks>
       </Docs>
     </Member>
-    <Member MemberName="ColormapCreateFromXpmD">
-      <MemberSignature Language="C#" Value="public static Gdk.Pixmap ColormapCreateFromXpmD (Gdk.Drawable drawable, Gdk.Colormap colormap, Gdk.Bitmap mask, Gdk.Color transparent_color, string data);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gdk.Pixmap</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="drawable" Type="Gdk.Drawable" />
-        <Parameter Name="colormap" Type="Gdk.Colormap" />
-        <Parameter Name="mask" Type="Gdk.Bitmap" />
-        <Parameter Name="transparent_color" Type="Gdk.Color" />
-        <Parameter Name="data" Type="System.String" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="drawable">a <see cref="T:Gdk.Drawable" /></param>
-        <param name="colormap">a <see cref="T:Gdk.Colormap" /></param>
-        <param name="mask">a <see cref="T:Gdk.Bitmap" /></param>
-        <param name="transparent_color">a <see cref="T:Gdk.Color" /></param>
-        <param name="data">a <see cref="T:System.String" /></param>
-        <returns>a <see cref="T:Gdk.Pixmap" /></returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="CreateFromXpm">
-      <MemberSignature Language="C#" Value="public static Gdk.Pixmap CreateFromXpm (Gdk.Drawable drawable, Gdk.Bitmap mask, Gdk.Color transparent_color, string filename);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gdk.Pixmap</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="drawable" Type="Gdk.Drawable" />
-        <Parameter Name="mask" Type="Gdk.Bitmap" />
-        <Parameter Name="transparent_color" Type="Gdk.Color" />
-        <Parameter Name="filename" Type="System.String" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="drawable">a <see cref="T:Gdk.Drawable" /></param>
-        <param name="mask">a <see cref="T:Gdk.Bitmap" /></param>
-        <param name="transparent_color">a <see cref="T:Gdk.Color" /></param>
-        <param name="filename">a <see cref="T:System.String" /></param>
-        <returns>a <see cref="T:Gdk.Pixmap" /></returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="LookupForDisplay">
       <MemberSignature Language="C#" Value="public static Gdk.Pixmap LookupForDisplay (Gdk.Display display, uint anid);" />
       <MemberType>Method</MemberType>
@@ -178,52 +132,6 @@ For example in the X backend, a native pixmap handle is an Xlib XID.
 <para>
 For example in the X backend, a native pixmap handle is an Xlib XID.
 </para></remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="ColormapCreateFromXpm">
-      <MemberSignature Language="C#" Value="public static Gdk.Pixmap ColormapCreateFromXpm (Gdk.Drawable drawable, Gdk.Colormap colormap, Gdk.Bitmap mask, Gdk.Color transparent_color, string filename);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gdk.Pixmap</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="drawable" Type="Gdk.Drawable" />
-        <Parameter Name="colormap" Type="Gdk.Colormap" />
-        <Parameter Name="mask" Type="Gdk.Bitmap" />
-        <Parameter Name="transparent_color" Type="Gdk.Color" />
-        <Parameter Name="filename" Type="System.String" />
-      </Parameters>
-      <Docs>
-        <summary>Create a pixmap from a XPM file.</summary>
-        <param name="drawable">a <see cref="T:Gdk.Drawable" />, used to determine default values for the new pixmap.</param>
-        <param name="colormap">The <see cref="T:Gdk.Colormap" /> that the new pixmap will be use. If omitted, the colormap for <paramref name="drawable" /> will be used.</param>
-        <param name="mask">a <see cref="T:Gdk.Bitmap" /> a pointer to a place to store a bitmap representing the transparency mask of the XPM file. Can be <see langword="null" />, in which case transparency will be ignored.</param>
-        <param name="transparent_color">The color to be used for the pixels that are transparent in the input file. Can be <see langword="null" />, in which case a default color will be used.</param>
-        <param name="filename">The filename</param>
-        <returns>a <see cref="T:Gdk.Pixmap" /></returns>
-        <remarks>Create a pixmap from a XPM file using a particular colormap.</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="CreateFromXpmD">
-      <MemberSignature Language="C#" Value="public static Gdk.Pixmap CreateFromXpmD (Gdk.Drawable drawable, Gdk.Bitmap mask, Gdk.Color transparent_color, string data);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>Gdk.Pixmap</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="drawable" Type="Gdk.Drawable" />
-        <Parameter Name="mask" Type="Gdk.Bitmap" />
-        <Parameter Name="transparent_color" Type="Gdk.Color" />
-        <Parameter Name="data" Type="System.String" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="drawable">a <see cref="T:Gdk.Drawable" /></param>
-        <param name="mask">a <see cref="T:Gdk.Bitmap" /></param>
-        <param name="transparent_color">a <see cref="T:Gdk.Color" /></param>
-        <param name="data">a <see cref="T:System.String" /></param>
-        <returns>a <see cref="T:Gdk.Pixmap" /></returns>
-        <remarks>To be added</remarks>
       </Docs>
     </Member>
     <Member MemberName="CreateFromData">
@@ -318,6 +226,98 @@ For example in the X backend, a native pixmap handle is an Xlib XID.
         <param name="height">The height of the new pixmap in pixels.</param>
         <returns>The new <see cref="T:Gdk.Pixmap" />.</returns>
         <remarks>Creates a new pixmap with a given size and depth.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="CreateFromXpmD">
+      <MemberSignature Language="C#" Value="public static Gdk.Pixmap CreateFromXpmD (Gdk.Drawable drawable, out Gdk.Bitmap mask, Gdk.Color transparent_color, string data);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Pixmap</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="drawable" Type="Gdk.Drawable" />
+        <Parameter Name="mask" Type="Gdk.Bitmap&amp;" RefType="out" />
+        <Parameter Name="transparent_color" Type="Gdk.Color" />
+        <Parameter Name="data" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <summary>Create a pixmap from XPM data.</summary>
+        <param name="drawable">a <see cref="T:Gdk.Drawable" /></param>
+        <param name="mask">a <see cref="T:Gdk.Bitmap" /></param>
+        <param name="transparent_color">a <see cref="T:Gdk.Color" /></param>
+        <param name="data">a <see cref="T:System.String" /></param>
+        <returns>a <see cref="T:Gdk.Pixmap" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="ColormapCreateFromXpm">
+      <MemberSignature Language="C#" Value="public static Gdk.Pixmap ColormapCreateFromXpm (Gdk.Drawable drawable, Gdk.Colormap colormap, out Gdk.Bitmap mask, Gdk.Color transparent_color, string filename);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Pixmap</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="drawable" Type="Gdk.Drawable" />
+        <Parameter Name="colormap" Type="Gdk.Colormap" />
+        <Parameter Name="mask" Type="Gdk.Bitmap&amp;" RefType="out" />
+        <Parameter Name="transparent_color" Type="Gdk.Color" />
+        <Parameter Name="filename" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <summary>Create a pixmap from an XPM file using a specific colormap.</summary>
+        <param name="drawable">a <see cref="T:Gdk.Drawable" /></param>
+        <param name="colormap">a <see cref="T:Gdk.Colormap" /></param>
+        <param name="mask">a <see cref="T:Gdk.Bitmap" /></param>
+        <param name="transparent_color">a <see cref="T:Gdk.Color" /></param>
+        <param name="filename">a <see cref="T:System.String" /></param>
+        <returns>a <see cref="T:Gdk.Pixmap" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="CreateFromXpm">
+      <MemberSignature Language="C#" Value="public static Gdk.Pixmap CreateFromXpm (Gdk.Drawable drawable, out Gdk.Bitmap mask, Gdk.Color transparent_color, string filename);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Pixmap</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="drawable" Type="Gdk.Drawable" />
+        <Parameter Name="mask" Type="Gdk.Bitmap&amp;" RefType="out" />
+        <Parameter Name="transparent_color" Type="Gdk.Color" />
+        <Parameter Name="filename" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <summary>Create a pixmap from an XPM file.</summary>
+        <param name="drawable">a <see cref="T:Gdk.Drawable" /></param>
+        <param name="mask">a <see cref="T:Gdk.Bitmap" /></param>
+        <param name="transparent_color">a <see cref="T:Gdk.Color" /></param>
+        <param name="filename">a <see cref="T:System.String" /></param>
+        <returns>a <see cref="T:Gdk.Pixmap" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="ColormapCreateFromXpmD">
+      <MemberSignature Language="C#" Value="public static Gdk.Pixmap ColormapCreateFromXpmD (Gdk.Drawable drawable, Gdk.Colormap colormap, out Gdk.Bitmap mask, Gdk.Color transparent_color, string data);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Pixmap</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="drawable" Type="Gdk.Drawable" />
+        <Parameter Name="colormap" Type="Gdk.Colormap" />
+        <Parameter Name="mask" Type="Gdk.Bitmap&amp;" RefType="out" />
+        <Parameter Name="transparent_color" Type="Gdk.Color" />
+        <Parameter Name="data" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <summary>Create a pixmap from XPM data using a colormap.</summary>
+        <param name="drawable">a <see cref="T:Gdk.Drawable" /></param>
+        <param name="colormap">a <see cref="T:Gdk.Colormap" /></param>
+        <param name="mask">a <see cref="T:Gdk.Bitmap" /></param>
+        <param name="transparent_color">a <see cref="T:Gdk.Color" /></param>
+        <param name="data">a <see cref="T:System.String" /></param>
+        <returns>a <see cref="T:Gdk.Pixmap" /></returns>
+        <remarks>To be added</remarks>
       </Docs>
     </Member>
   </Members>
