@@ -87,7 +87,7 @@
         <summary>The screen this widget is attached to.</summary>
         <param name="value">a <see cref="T:Gdk.Screen" /></param>
         <returns>a <see cref="T:Gdk.Screen" /></returns>
-        <remarks/>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -115,6 +115,20 @@
         <param name="gtype">a <see cref="T:GLib.GType" /></param>
         <returns>a <see cref="T:Gtk.Invisible" /></returns>
         <remarks>Chain to this constructor if you have manually registered a native <see cref="T:GLib.GType" /> value for your subclass.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public Invisible (Gdk.Screen screen);" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters>
+        <Parameter Name="screen" Type="Gdk.Screen" />
+      </Parameters>
+      <Docs>
+        <summary>Public Constructor</summary>
+        <param name="screen">a <see cref="T:Gdk.Screen" /></param>
+        <returns>a <see cref="T:Gtk.Invisible" /></returns>
+        <remarks>Used to create a new <see cref="T:Gtk.Invisible" /> for a specific <see cref="T:Gdk.Screen" />.</remarks>
       </Docs>
     </Member>
   </Members>
